--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongodb": "^6.11.0",
     "mongoose": "^8.8.2",
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.0",
